# h5ds

./: .gitignore  README.md  pyproject.toml
h5ds/: __init__.py  __main__.py  dataset.py
h5ds/convertor/: __init__.py  bc_z.py  bridge.py  cmu_play_fusion.py  convertor.py  dobbe.py
src/h5ds/: __init__.py  __main__.py  dataset.py
src/h5ds/convertor/: __init__.py  bc_z.py  bridge_v2.py  calvin_convertor.py  cmu_play_fusion.py  convertor.py  dataset_spec.py  dobbe.py  droid.py  fmb.py  fractal20220817_data.py  kuka.py  maniskill_dataset_converted_externally_to_rlds.py  robot_spec.py
